# rs_zero2prod

./: .dockerignore  .env  .gitignore.swp  .rustfmt.toml  Cargo.toml  Dockerfile  build_docker.sh  config.yml  readme.md  run.sh  run_docker.sh
.local/: readme.md
.local/thunder-tests/: thunderCollection.db  thunderclient.db
config/: base.yml  local.yml  production.yml
migrations/: 20211107132408_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  tests_support.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
