[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
name = "rs_zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ztp-rs"
path = "src/main.rs"

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
actix-server = "2.1.1"

chrono = "0.4.19"
config = { version = "0.11", default-features = false, features = ["yaml"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = {version = "1", features = ["derive"]}
uuid = {version = "0.8.2", features = ["v4"]}

# This has to be here instead of just to `dev-dependencies` as it's needed in `tests_support` module.
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

## Using table-like toml syntax to avoid a super-long line.
[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls", # Use Actix runtime for its future and `rustls` as TLS backend.
  "macros", # Have access to `sqlx::query!` and `sqlx::query_as!` macros.
  "postgres", # Have access to Postgres specific features (such as non-standard SQL types).
  "uuid", # Add support for mapping SQL UUIDs to the Uuid type from `uuid` create.
  "chrono", # Add support for mapping SQL `timestamptz` to the `DateTime<T>` type of `chrono` crate.
  "migrate", # Have access to the features used by `sqlx-cli` to manage migrations, useful for our test suite.
]
version = "0.5.13"


[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
