[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"
name = "rs_zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ztp-rs"
path = "src/main.rs"

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
actix-server = "2.1.1"

chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
openssl = { version = "0.10.40", features = ["vendored"] }
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.0.0", features = ["v4"] }

# This has to be here instead of just to `dev-dependencies` as it's needed in `tests_support` module.
tokio = { version = "1.18.2", features = [ "macros", "rt-multi-thread" ] }

tracing = { version = "0.1.34", features = [ "log" ] }
tracing-subscriber = { version = "0.3.11", features = [ "registry", "env-filter" ] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"

once_cell = "1.11.0"
secrecy = { version = "0.8.0", features = [ "serde" ] }

## Using table-like toml syntax to avoid a super-long line.
[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls", # Use Actix runtime for its future and `rustls` as TLS backend.
  "macros", # Have access to `sqlx::query!` and `sqlx::query_as!` macros.
  "postgres", # Have access to Postgres specific features (such as non-standard SQL types).
  "uuid", # Add support for mapping SQL UUIDs to the Uuid type from `uuid` create.
  "chrono", # Add support for mapping SQL `timestamptz` to the `DateTime<T>` type of `chrono` crate.
  "migrate", # Have access to the features used by `sqlx-cli` to manage migrations, useful for our test suite.
]
version = "0.5.13"


[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"


[package.metadata.cargo-udeps.ignore]
normal = [ "openssl" ]
